force-app/main/default/objects/Aha_Ideas__c/Aha_Ideas__c.object-meta.xml
<CustomObject>
    <description>This object is used to store the Aha Idea when ever we integrate the Aha Idea with the Salesforce.</description>
    <label>Aha Ideas</label>
    <nameField>
        <label>Aha Ideas Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Aha Ideas</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>