force-app/main/default/objects/Aha_Ideas__c/fields/Account_Preference__c.field-meta.xml
<CustomField>
    <fullName>Account_Preference__c</fullName>
    <description>This field is used to store the Idea related Opportunity and Cases Account field Account Preference value.</description>
    <label>Account Preference</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Advisory Account</fullName>
            </value>
            <value>
                <fullName>Critical Account</fullName>
            </value>
            <value>
                <fullName>CSM Account</fullName>
            </value>
            <value>
                <fullName>CSM Critical Account</fullName>
            </value>
            <value>
                <fullName>CSM SaaS Account</fullName>
            </value>
            <value>
                <fullName>CSM Strategic Account</fullName>
            </value>
            <value>
                <fullName>Major Account</fullName>
            </value>
            <value>
                <fullName>POC</fullName>
            </value>
            <value>
                <fullName>Premium Account</fullName>
            </value>
            <value>
                <fullName>Premium - CES</fullName>
            </value>
            <value>
                <fullName>PSO Handoff</fullName>
            </value>
            <value>
                <fullName>Ransomware recovery</fullName>
            </value>
            <value>
                <fullName>RASP End User Customer</fullName>
            </value>
            <value>
                <fullName>RASP Partner Account</fullName>
            </value>
            <value>
                <fullName>Strategic Account</fullName>
            </value>
            <value>
                <fullName>Top-20 Account</fullName>
            </value>
            <value>
                <fullName>Top-50 Account</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>