force-app/main/default/objects/Aha_Ideas__c/fields/Aha_Idea_Number__c.field-meta.xml
<CustomField>
    <fullName>Aha_Idea_Number__c</fullName>
    <description>This field is used to store the Aha Idea Id.</description>
    <label>Aha Idea Number</label>
    <length>30</length>
    <type>Text</type>
</CustomField>