force-app/main/default/objects/Aha_Ideas__c/fields/Aha_Idea_Origin__c.field-meta.xml
<CustomField>
    <fullName>Aha_Idea_Origin__c</fullName>
    <description>This Field will store the Id of the Object record (Opportunity OR Case) from where the Idea is created through Form.</description>
    <label>Aha Idea Origin</label>
    <length>20</length>
    <type>Text</type>
</CustomField>