force-app/main/default/objects/Aha_Ideas__c/fields/Aha_Idea_Owner__c.field-meta.xml
<CustomField>
    <fullName>Aha_Idea_Owner__c</fullName>
    <label>Aha Idea Owner</label>
    <length>100</length>
    <type>Text</type>
</CustomField>