force-app/main/default/objects/Aha_Ideas__c/fields/Aha_Unique_ID__c.field-meta.xml
<CustomField>
    <fullName>Aha_Unique_ID__c</fullName>
    <description>This field will store the Aha Idea reference_num</description>
    <label>Aha Unique ID</label>
    <length>50</length>
    <type>Text</type>
</CustomField>