force-app/main/default/objects/Aha_Ideas__c/fields/Business_Case_Value__c.field-meta.xml
<CustomField>
    <fullName>Business_Case_Value__c</fullName>
    <description>This field will store the exact value from the Aha Idea field Business Case/Value</description>
    <inlineHelpText>Link the opportunity or case ID.</inlineHelpText>
    <label>Business Case/Value</label>
    <length>16000</length>
    <type>LongTextArea</type>
</CustomField>