force-app/main/default/objects/Aha_Ideas__c/fields/Confidence_Details__c.field-meta.xml
<CustomField>
    <fullName>Confidence_Details__c</fullName>
    <description>CS21-3714: Aha - Salesforce Discrepancies in tracking ideas/RFEs</description>
    <label>Confidence Details</label>
    <type>TextArea</type>
</CustomField>