force-app/main/default/objects/Aha_Ideas__c/fields/Creator_Proposed_Solution__c.field-meta.xml
<CustomField>
    <fullName>Creator_Proposed_Solution__c</fullName>
    <description>This field will store the exact value from the Aha Idea field Creator Proposed Solution</description>
    <label>Creator Proposed Solution</label>
    <length>16000</length>
    <type>LongTextArea</type>
</CustomField>