force-app/main/default/objects/Aha_Ideas__c/fields/Duplicate_of__c.field-meta.xml
<CustomField>
    <fullName>Duplicate_of__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This field is used to Store the Aha Idea reference_no which is marked duplicate of Aha Idea</description>
    <label>Duplicate of</label>
    <referenceTo>Aha_Ideas__c</referenceTo>
    <relationshipLabel>Aha Ideas</relationshipLabel>
    <relationshipName>Aha_Ideas</relationshipName>
    <type>Lookup</type>
</CustomField>