force-app/main/default/objects/Aha_Ideas__c/fields/Engineering_Confidence_in_Delivery__c.field-meta.xml
<CustomField>
    <fullName>Engineering_Confidence_in_Delivery__c</fullName>
    <description>CS21-3714: Aha - Salesforce Discrepancies in tracking ideas/RFEs</description>
    <label>Engineering Confidence in Delivery</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Green</fullName>
            </value>
            <value>
                <fullName>Yellow</fullName>
            </value>
            <value>
                <fullName>Red</fullName>
            </value>
            <value>
                <fullName>Orange - PRD pending</fullName>
            </value>
            <value>
                <fullName>Blue - Complete</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>