force-app/main/default/objects/Aha_Ideas__c/fields/Engineering_Reference_Number__c.field-meta.xml
<CustomField>
    <fullName>Engineering_Reference_Number__c</fullName>
    <label>Engineering Reference Number</label>
    <length>20000</length>
    <type>LongTextArea</type>
</CustomField>