force-app/main/default/objects/Aha_Ideas__c/fields/Engineering_Status__c.field-meta.xml
<CustomField>
    <fullName>Engineering_Status__c</fullName>
    <description>CS21-3714: Aha - Salesforce Discrepancies in tracking ideas/RFEs</description>
    <label>Engineering Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>To Do</fullName>
            </value>
            <value>
                <fullName>In Progress</fullName>
            </value>
            <value>
                <fullName>In Design</fullName>
            </value>
            <value>
                <fullName>In Progress - Design Pending</fullName>
            </value>
            <value>
                <fullName>Design in Review</fullName>
            </value>
            <value>
                <fullName>Rollout</fullName>
            </value>
            <value>
                <fullName>Done</fullName>
            </value>
            <value>
                <fullName>Canceled</fullName>
            </value>
            <value>
                <fullName>Text</fullName>
                <isActive>false</isActive>
                <label>Text</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>