force-app/main/default/objects/Aha_Ideas__c/fields/Escalation__c.field-meta.xml
<CustomField>
    <fullName>Escalation__c</fullName>
    <description>This Field will be set to True if User Escalate any Idea from the Escalate Button on Idea in Salesforce and in Aha</description>
    <label>Escalation?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>