force-app/main/default/objects/Aha_Ideas__c/fields/External_Unique_Id__c.field-meta.xml
<CustomField>
    <fullName>External_Unique_Id__c</fullName>
    <description>This field is used concatenate the value Aha Idea Number and the Aha Unique Id</description>
    <formula>Aha_Idea_Number__c +  Aha_Unique_ID__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>External Unique Id</label>
    <type>Text</type>
</CustomField>