force-app/main/default/objects/Aha_Ideas__c/fields/Feature_Name__c.field-meta.xml
<CustomField>
    <fullName>Feature_Name__c</fullName>
    <description>CS21-3714: This field stores the feature reference number and name from AHA</description>
    <label>Feature Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>