force-app/main/default/objects/Aha_Ideas__c/fields/Feature_Phase__c.field-meta.xml
<CustomField>
    <fullName>Feature_Phase__c</fullName>
    <description>CS21-3714: Aha - Salesforce Discrepancies in tracking ideas/RFEs</description>
    <label>Feature Phase</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>GA</fullName>
            </value>
            <value>
                <fullName>Discovery</fullName>
            </value>
            <value>
                <fullName>Requirements (PRD, Mock, Eng Reviews)</fullName>
            </value>
            <value>
                <fullName>Execution (Eng Dev, Test)</fullName>
            </value>
            <value>
                <fullName>Beta</fullName>
            </value>
            <value>
                <fullName>Rollout (Optional Phase)</fullName>
            </value>
            <value>
                <fullName>Cancelled</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>