force-app/main/default/objects/Aha_Ideas__c/fields/Feature_Reference__c.field-meta.xml
<CustomField>
    <fullName>Feature_Reference__c</fullName>
    <label>Feature Reference</label>
    <length>255</length>
    <type>Text</type>
</CustomField>