force-app/main/default/objects/Aha_Ideas__c/fields/Feature_Status__c.field-meta.xml
<CustomField>
    <fullName>Feature_Status__c</fullName>
    <description>CS21-3714: This field stores the feature workflow status from AHA</description>
    <label>Feature Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Not Started</fullName>
            </value>
            <value>
                <fullName>On Track</fullName>
            </value>
            <value>
                <fullName>At Risk with Mitigation Plan</fullName>
            </value>
            <value>
                <fullName>Critical</fullName>
            </value>
            <value>
                <fullName>Done</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>