force-app/main/default/objects/Aha_Ideas__c/fields/Feature_Target_Release__c.field-meta.xml
<CustomField>
    <fullName>Feature_Target_Release__c</fullName>
    <label>Feature Target Release</label>
    <length>255</length>
    <type>Text</type>
</CustomField>