force-app/main/default/objects/Aha_Ideas__c/fields/For_Workspace__c.field-meta.xml
<CustomField>
    <fullName>For_Workspace__c</fullName>
    <description>This field will store the exact value from the Aha Idea field For Workspace</description>
    <label>For Workspace</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Data Management Platform</fullName>
                <label>Rubrik</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>