force-app/main/default/objects/Aha_Ideas__c/fields/Idea_Category__c.field-meta.xml
<CustomField>
    <fullName>Idea_Category__c</fullName>
    <description>This field will store the exact value from the Aha Idea field Idea Category</description>
    <label>Idea Category</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Competitive Gap</fullName>
            </value>
            <value>
                <fullName>New Feature/Feature Enhancement</fullName>
            </value>
            <value>
                <fullName>Supportability</fullName>
            </value>
            <value>
                <fullName>Usability</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>