force-app/main/default/objects/Aha_Ideas__c/fields/Idea_Created_By__c.field-meta.xml
<CustomField>
    <fullName>Idea_Created_By__c</fullName>
    <description>CS21-3714: This field stores the name of the user who created the idea in AHA</description>
    <label>Idea Created By</label>
    <length>255</length>
    <type>Text</type>
</CustomField>