force-app/main/default/objects/Aha_Ideas__c/fields/Idea_Created_Date__c.field-meta.xml
<CustomField>
    <fullName>Idea_Created_Date__c</fullName>
    <description>CS21-3714:This field stores the date and time when the idea was created in AHA</description>
    <label>Idea Created Date</label>
    <type>DateTime</type>
</CustomField>