force-app/main/default/objects/Aha_Ideas__c/fields/Idea_Description__c.field-meta.xml
<CustomField>
    <fullName>Idea_Description__c</fullName>
    <description>This field will store the exact value from the Aha Idea field For description</description>
    <label>Idea Description</label>
    <length>18000</length>
    <type>LongTextArea</type>
</CustomField>