force-app/main/default/objects/Aha_Ideas__c/fields/Idea_Tags__c.field-meta.xml
<CustomField>
    <fullName>Idea_Tags__c</fullName>
    <label>Idea Tags</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Competitive Differentiator</fullName>
            </value>
            <value>
                <fullName>Competitive Gap</fullName>
            </value>
            <value>
                <fullName>Deal Loss</fullName>
            </value>
            <value>
                <fullName>Existing Feature Improvement</fullName>
            </value>
            <value>
                <fullName>New Score (2.0)</fullName>
            </value>
            <value>
                <fullName>Supportability</fullName>
            </value>
            <value>
                <fullName>Usability</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>