force-app/main/default/objects/Aha_Ideas__c/fields/Impacted_Customers__c.field-meta.xml
<CustomField>
    <fullName>Impacted_Customers__c</fullName>
    <description>This field will store the Opportunity or Case Account Name which is linked with Idea</description>
    <label>Impacted Customers</label>
    <length>16000</length>
    <type>LongTextArea</type>
</CustomField>