force-app/main/default/objects/Aha_Ideas__c/fields/PM_Response__c.field-meta.xml
<CustomField>
    <fullName>PM_Response__c</fullName>
    <label>PM Response</label>
    <length>16000</length>
    <type>Html</type>
</CustomField>