force-app/main/default/objects/Aha_Ideas__c/fields/Priority__c.field-meta.xml
<CustomField>
    <fullName>Priority__c</fullName>
    <description>CS21-3692: For Aha &lt;&gt; SFDC Idea Integration: Add New Priority Field to Integration</description>
    <label>Priority</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Nice to Have - Low</fullName>
            </value>
            <value>
                <fullName>Good to Have - Medium</fullName>
            </value>
            <value>
                <fullName>Must Have - High</fullName>
            </value>
            <value>
                <fullName>Critical - Blocker</fullName>
            </value>
            <value>
                <fullName>Complete</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>