force-app/main/default/objects/Aha_Ideas__c/fields/Problem_Statement__c.field-meta.xml
<CustomField>
    <fullName>Problem_Statement__c</fullName>
    <description>This field will store the exact value from the Aha Idea field Problem Statement</description>
    <inlineHelpText>Describe the pain point. Focus on the problem behind the ask and NOT the solution.</inlineHelpText>
    <label>Problem Statement</label>
    <length>16000</length>
    <type>LongTextArea</type>
</CustomField>