force-app/main/default/objects/Aha_Ideas__c/fields/Product_Area__c.field-meta.xml
<CustomField>
    <fullName>Product_Area__c</fullName>
    <description>This field will store the exact value from the Aha Idea field Product Area</description>
    <label>Product Area</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Cloud (AWS/Azure/GCP/OCI workloads, cloud native protection)</fullName>
            </value>
            <value>
                <fullName>Identity &amp; Security</fullName>
            </value>
            <value>
                <fullName>EDP (On-Prem Workloads: Databases, Hypervisors, NAS, NAS-CD)</fullName>
            </value>
            <value>
                <fullName>Platform (CDM, RSC, Platform Security, Hardware, APIs, Reporting, SLAs, Licensing, RCV, CCES, Security Integrations)</fullName>
            </value>
            <value>
                <fullName>Fed, Sled, MSP</fullName>
            </value>
            <value>
                <fullName>SaaS (M365, Salesforce, Jira)</fullName>
            </value>
            <value>
                <fullName>AI</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>