force-app/main/default/objects/Aha_Ideas__c/fields/Product_Component_For_Idea_Form__c.field-meta.xml
<CustomField>
    <fullName>Product_Component_For_Idea_Form__c</fullName>
    <label>Product Component</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Activities and Notifications</fullName>
            </value>
            <value>
                <fullName>All Databases</fullName>
            </value>
            <value>
                <fullName>API &amp; SDK</fullName>
            </value>
            <value>
                <fullName>archive</fullName>
            </value>
            <value>
                <fullName>AWS Data Protection</fullName>
            </value>
            <value>
                <fullName>Azure Data Protection</fullName>
            </value>
            <value>
                <fullName>CDM Infrastructure - Atlas/Callisto/Blo</fullName>
            </value>
            <value>
                <fullName>CDM Infrastructure - Atlas/Callisto/Blobstore</fullName>
            </value>
            <value>
                <fullName>CDM on Virtual (ROBO)</fullName>
            </value>
            <value>
                <fullName>CDM on Virtual ROBO</fullName>
            </value>
            <value>
                <fullName>CDM platform</fullName>
            </value>
            <value>
                <fullName>Cloud Cluster</fullName>
            </value>
            <value>
                <fullName>cloud native data protection</fullName>
            </value>
            <value>
                <fullName>CloudOn</fullName>
            </value>
            <value>
                <fullName>CloudOut</fullName>
            </value>
            <value>
                <fullName>CloudOut/Archival</fullName>
            </value>
            <value>
                <fullName>cluster</fullName>
            </value>
            <value>
                <fullName>Cluster Configs</fullName>
            </value>
            <value>
                <fullName>Cluster Upgrades</fullName>
            </value>
            <value>
                <fullName>Command Center</fullName>
            </value>
            <value>
                <fullName>Continuous Threat Monitoring</fullName>
            </value>
            <value>
                <fullName>Databases - DB2</fullName>
            </value>
            <value>
                <fullName>Databases - MySQL</fullName>
            </value>
            <value>
                <fullName>Databases - Oracle</fullName>
            </value>
            <value>
                <fullName>Databases - Other</fullName>
            </value>
            <value>
                <fullName>Databases - SAP HANA</fullName>
            </value>
            <value>
                <fullName>Databases - SQLServer</fullName>
            </value>
            <value>
                <fullName>Data Protection - Integrations</fullName>
            </value>
            <value>
                <fullName>Data Security Command Center</fullName>
            </value>
            <value>
                <fullName>Data Security - Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>