force-app/main/default/objects/Aha_Ideas__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Assigned: Needs Review</fullName>
            </value>
            <value>
                <fullName>Closed: Delivered</fullName>
            </value>
            <value>
                <fullName>Closed: Duplicate</fullName>
            </value>
            <value>
                <fullName>Closed: Missing information</fullName>
            </value>
            <value>
                <fullName>Closed: Promoted</fullName>
            </value>
            <value>
                <fullName>Closed: Won&apos;t Fix</fullName>
            </value>
            <value>
                <fullName>Competitive Gap</fullName>
            </value>
            <value>
                <fullName>Deferred</fullName>
            </value>
            <value>
                <fullName>Dev,Test</fullName>
            </value>
            <value>
                <fullName>Duplicate-DO NOT USE</fullName>
            </value>
            <value>
                <fullName>Eng Design</fullName>
            </value>
            <value>
                <fullName>Engg Work Item</fullName>
            </value>
            <value>
                <fullName>GA/Complete</fullName>
            </value>
            <value>
                <fullName>Needs Additional Info</fullName>
            </value>
            <value>
                <fullName>Needs review</fullName>
            </value>
            <value>
                <fullName>New</fullName>
            </value>
            <value>
                <fullName>New Feature/Feature Enhancement</fullName>
            </value>
            <value>
                <fullName>Not Started</fullName>
            </value>
            <value>
                <fullName>PRD Draft In Progress</fullName>
            </value>
            <value>
                <fullName>PRD Review</fullName>
            </value>
            <value>
                <fullName>PRD Review/Mocks In Progress</fullName>
            </value>
            <value>
                <fullName>PRD Review In Progress</fullName>
            </value>
            <value>
                <fullName>Promoted to Feature/Epic-DO NOT USE</fullName>
            </value>
            <value>
                <fullName>Supportability</fullName>
            </value>
            <value>
                <fullName>Under consideration</fullName>
            </value>
            <value>
                <fullName>Under Review</fullName>
            </value>
            <value>
                <fullName>Usability</fullName>
            </value>
            <value>
                <fullName>Potential Roadmap Candidate</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>