force-app/main/default/objects/Aha_Ideas__c/fields/Strategic_Major_Account__c.field-meta.xml
<CustomField>
    <fullName>Strategic_Major_Account__c</fullName>
    <description>This field will store the Count of the Account where the Account Field Strategic Account is True.</description>
    <label>Strategic/Major Account?</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>