force-app/main/default/objects/Aha_Ideas__c/fields/Tags__c.field-meta.xml
<CustomField>
    <fullName>Tags__c</fullName>
    <label>Tags</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>CDM parity features</fullName>
            </value>
            <value>
                <fullName>ExcludeSummer2021</fullName>
            </value>
            <value>
                <fullName>Reprioritized</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>