force-app/main/default/objects/Aha_Ideas__c/fields/Total_Amount_for_the_In_Flight_Oppty__c.field-meta.xml
<CustomField>
    <fullName>Total_Amount_for_the_In_Flight_Oppty__c</fullName>
    <description>This field will store the total ACV_Amount of the Open Opportunity which is linked with Idea.</description>
    <label>Total Amount for the In Flight Oppty</label>
    <length>50</length>
    <type>Text</type>
</CustomField>