force-app/main/default/objects/Aha_Ideas__c/fields/Total_No_of_Cases_Link_With_Idea__c.field-meta.xml
<CustomField>
    <fullName>Total_No_of_Cases_Link_With_Idea__c</fullName>
    <description>This field will store the total Count of Cases which is linked with Idea.</description>
    <label>Total No of Cases Link With Idea</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>