force-app/main/default/objects/Aha_Ideas__c/fields/zIsssue_Number__c.field-meta.xml
<CustomField>
    <fullName>zIsssue_Number__c</fullName>
    <description>This field will store the total Zissue Record Name which is linked with Idea.</description>
    <label>zIsssue Number</label>
    <length>25</length>
    <type>Text</type>
</CustomField>