force-app/main/default/objects/Aha_Ideas__c/fields/zsfjira_Components__c.field-meta.xml
<CustomField>
    <fullName>zsfjira_Components__c</fullName>
    <label>zsfjira Components</label>
    <length>255</length>
    <type>Text</type>
</CustomField>